# lifeops-auth-service

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  blueprint.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: auto-pr.yml  ci.yml  codeql.yml  commit-check.yml
app/: lifespan.py  main.py
app/config/: settings.py
app/core/: logging.py
app/middleware/: logging_middleware.py
app/models/: audit_log.py  refresh_token.py  subscription.py  user.py
docker/: entrypoint.sh  nginx.conf
docs/: LifeOps_AuthService_Blueprint.docx  LifeOps_Blueprint.docx  LifeOps_ProxyService_Blueprint_v1.docx
scripts/: generate_keys.py
src/app/: lifespan.py
src/app/config/: database.py  redis.py  security.py  settings.py
src/app/core/: logging.py
src/app/models/: refresh_token.py  subscription.py
tests/: conftest.py  test_smoke.py
